Changed font for a commodore monospace font- not as awesome, but readable.  Also, fixed some more sql.

--- a/static/css/highscores.less
+++ b/static/css/highscores.less
@@ -1,7 +1,7 @@
 @font-face{
-  /* credit to JOIRO.THE3DSTUDIO.COM */
-  font-family: "eight-bit";
-  src: url('/static/eight-bit-wonder.ttf');
+  /* credit to http://www.kreativekorp.com/software/fonts/c64.shtml */
+  font-family: "commodore";
+  src: url('/static/fonts/PetMe.ttf');
 }
 body{
   color: #eee;
@@ -27,7 +27,7 @@ form input.form-submit {
   margin-left: 15px;
 }
 .content{
-  font-family: "eight-bit";
+  font-family: "commodore";
   width: 100%;
   text-align: center;
   margin: 0 auto;
